
* Lemma even_succ_div_2 renamed to even_half_succ_eq.  Minor INCOMPATIBILITY.

* Theory "HOL.Transitive_Closure":
  - Added lemmas.
      relpow_left_unique
      relpow_right_unique
      relpow_trans[trans]
      relpowp_left_unique
      relpowp_right_unique
      relpowp_trans[trans]

* Theory "HOL-Library.Multiset":
  - Added lemmas.
      trans_on_mult
      transp_on_multp


*** ML ***

* ML antiquotation "try" provides variants of exception handling that
avoids accidental capture of physical interrupts (which could affect ML
semantics in unpredictable ways):

  \<^try>\<open>EXPR catch HANDLER\<close>
  \<^try>\<open>EXPR finally HANDLER\<close>
  \<^try>\<open>EXPR\<close>

See also the implementations Isabelle_Thread.try_catch / try_finally /
try. The HANDLER always runs as uninterruptible, but the EXPR uses the
the current thread attributes (normally interruptible). Various examples
occur in the Isabelle sources (.ML and .thy files).

* ML antiquotation "simproc_setup" inlines an invocation of
Simplifier.simproc_setup, using the same concrete syntax as the
corresponding Isar command. This allows to introduce a new simproc
conveniently within an ML module, and refer directly to its ML value.
For example, the simproc "Record.eq" is defined in
~~/src/HOL/Tools/record.ML as follows:

  val eq_simproc = \<^simproc_setup>\<open>eq ("r = s") = \<open>K eq_proc\<close>\<close>;

* Simplification procedures may be distinguished via characteristic
theorems that are specified as 'identifier' in ML antiquotation
"simproc_setup" (but not in the corresponding Isar command). This allows
to work with several versions of the simproc, e.g. due to locale
interpretations.

* Isabelle/ML explicitly rejects 'handle' with catch-all patterns.
INCOMPATIBILITY, better use \<^try>\<open>...\<close> with 'catch' or 'finally', or
as last resort declare [[ML_catch_all]] within the theory context.

* Proper interrupts (e.g. timeouts) are now distinguished from Poly/ML